@@ -98,3 +98,6 @@ CB_ONWARNDEF (cb_warn_dialect, "dialect",
 
 CB_ONWARNDEF (cb_warn_filler, "others",
 	_("  -Wothers              do not warn about different issues"))
+
+CB_WARNDEF (cb_warn_unsupported, "unsupported",
+	_("  -Wunsupported         warn if compiler does not support a feature used"))
